#491 #494 #453 remove online library version checker, add remote plugin, add two new theme builder based plugins.